Fix scrolling bug by restricting overflow hidden to map page

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@
         color: white;
     }
 
-    body {
+    body.has-map {
         height: 100vh;
         overflow: hidden;
     }
